<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorContent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorMain"
        android:orientation="horizontal"
        style="@style/row_side_padding_dp_15">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:src="@drawable/blt_con01"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:textColor="@color/color1"
            android:textSize="@dimen/font_midium"
            android:text="@string/diagnosis_content_lp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/row_side_margin_dp_15"
        android:stretchColumns="*">

        <TableRow
            android:layout_marginTop="5dp">

            <TextView
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                android:text="@string/diagnosis_content_lp_lc" />

            <TextView
                android:id="@+id/diagnosis_content_lp_lcV"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                tools:text="0" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <TextView
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                android:text="@string/diagnosis_content_lp_of" />

            <TextView
                android:id="@+id/diagnosis_content_lp_ofV"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                tools:text="0" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <TextView
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                android:text="@string/diagnosis_content_lp_sf" />

            <TextView
                android:id="@+id/diagnosis_content_lp_sfV"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                tools:text="0" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <TextView
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                android:text="@string/diagnosis_content_lp_fco" />

            <TextView
                android:id="@+id/diagnosis_content_lp_fcoV"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                tools:text="0" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <TextView
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                android:text="@string/diagnosis_content_lp_lr" />

            <TextView
                android:id="@+id/diagnosis_content_lp_lrV"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                tools:text="0" />
        </TableRow>

    </TableLayout>

</LinearLayout>
