<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorContent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorMain"
        android:orientation="horizontal"
        style="@style/row_side_padding_dp_15">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:src="@drawable/blt_con01"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:textColor="@color/color1"
            android:textSize="@dimen/font_midium"
            android:text="@string/diagnosis_content_tc" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/row_side_margin_dp_15"
        android:stretchColumns="1,2">

        <TableRow
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="50dp"
                android:textColor="@color/color3"
                android:textSize="@dimen/font_midsmall"
                android:text="@string/diagnosis_content_tc_en" />

            <TextView
                android:gravity="center"
                android:textColor="@color/color3"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/font_midsmall"
                android:text="@string/diagnosis_content_tc_lw" />

            <TextView
                android:gravity="center"
                android:textColor="@color/color3"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/font_midsmall"
                android:text="@string/diagnosis_content_tc_ld" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/diagnosis_content_tc_en_rmsV"
                android:theme="@style/checkBoxStyle"
                android:enabled="false"
                android:textSize="@dimen/font_small"
                android:text="RMS(m/s^2)" />

            <TextView
                android:id="@+id/diagnosis_content_tc_lw_rmsV"
                android:gravity="center"
                android:textColor="@color/color1"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/font_midsmall"
                android:text="0" />

            <TextView
                android:id="@+id/diagnosis_content_tc_ld_rmsV"
                android:gravity="center"
                android:textColor="@color/color1"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/font_midsmall"
                android:text="0" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/diagnosis_content_tc_en_pekV"
                android:theme="@style/checkBoxStyle"
                android:enabled="false"
                android:textSize="@dimen/font_small"
                android:text="Peak(m/s^2)" />

            <TextView
                android:id="@+id/diagnosis_content_tc_lw_pekV"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                android:text="0" />

            <TextView
                android:id="@+id/diagnosis_content_tc_ld_pekV"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                android:text="0" />
        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">
            <CheckBox
                android:id="@+id/diagnosis_content_tc_en_crfV"
                android:theme="@style/checkBoxStyle"
                android:enabled="false"
                android:textSize="@dimen/font_small"
                android:text="CrestFac." />

            <TextView
                android:id="@+id/diagnosis_content_tc_lw_crfV"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                android:text="0" />

            <TextView
                android:id="@+id/diagnosis_content_tc_ld_crfV"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/font_midsmall"
                android:text="0" />

        </TableRow>

    </TableLayout>


</LinearLayout>
